feature#5 Example of archiving a file jpeg